[package]
name = "quokkasim"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/jajetloh/quokkasim"
license = "MIT"

[lib]
name = "quokkasim"
path = "src/lib.rs"

[dependencies]
nexosim = "0.3.0-beta.0"
tai-time = { version = "0.3.3", features = ["serde", "chrono"] }
indexmap = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
rand_distr = "0.4.3"
rand = { version = "0.8.5", features = [ "small_rng" ] }
futures = "0.3.31"
csv = "1.3.1"
clap = "4.5.37"
paste = "1.0"