[package]
name = "quokkasim"
description = "A Rust-based Discrete Event Simulation (DES) framework, which simplifies simulation for beginners, and provides excellent utilities for experience modellers."
version = "0.0.0"
edition = "2024"
repository = "https://github.com/jajetloh/quokkasim"
license = "MIT"

[lib]
name = "quokkasim"
path = "src/lib.rs"

[dependencies]
nexosim = "0.3.0-beta.0"
tai-time = { version = "0.3.3", features = ["serde", "chrono"] }
indexmap = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
strum = "0.27.1"
strum_macros = "0.27.1"
rand_distr = "0.4.3"
rand = { version = "0.8.5", features = [ "small_rng" ] }
futures = "0.3.31"
csv = "1.3.1"
clap = "4.5.37"
paste = "1.0"
