[package]
name = "quokkasim"
description = "A Rust-based Discrete Event Simulation (DES) framework, which simplifies simulation for beginners, and provides excellent utilities for experienced modellers."
version = "0.2.0"
edition = "2024"
readme = "../README.md"
repository = "https://github.com/jajetloh/quokkasim"
documentation = "https://jajetloh.github.io/quokkasim-book/"
license-file = "LICENCE"
authors = ["Ja-Jet Loh"]
categories = ["simulation", "asynchronous", "science"]
keywords = ["discrete-event", "logistics", "digital-twin", "framework", "stochastic"]

[lib]
name = "quokkasim"
path = "src/lib.rs"

[dependencies]
nexosim = "0.3.3"
tai-time = { version = "0.3.3", features = ["serde", "chrono"] }
indexmap = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
strum = "0.27.1"
strum_macros = "0.27.1"
rand_distr = "0.4.3"
rand = { version = "0.8.5", features = [ "small_rng" ] }
futures = "0.3.31"
csv = "1.3.1"
clap = "4.5.37"
paste = "1.0"
quokkasim_derive_macros = { path= "../quokkasim_derive_macros" }