[package]
name = "quokkasim_derive_macros"
description = "Derive macros for the QuokkaSim simulation framework."
version = "0.2.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/jajetloh/quokkasim"
documentation = "https://jajetloh.github.io/quokkasim-book/"
license-file = "LICENCE"
authors = ["Ja-Jet Loh"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }