[package]
name = "quokkasim_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
quokkasim = { path = "../quokkasim" }
nexosim = "0.3.0-beta.0"
csv = "1.3.1"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
unzip3 = "1.0.0"