[package]
name = "quokkasim_examples"
version = "0.2.1"
edition = "2024"

[dependencies]
quokkasim = { path = "../quokkasim" }
nexosim = "0.3.0-beta.0"
csv = "1.3.1"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9"
unzip3 = "1.0.0"
indexmap = "2.9.0"
rayon = "1.10.0"
paste = "1.0.15"
log = "0.4.27"
strum = "0.27.1"
strum_macros = "0.27.1"

[[test]]
name = "truck_loading_dumping"
path = "src/bin/truck_loading_dumping/main.rs"
harness = false

[[test]]
name = "assembly_line"
path = "src/bin/assembly_line.rs"
harness = false

[[test]]
name = "delay_testing"
path = "src/bin/delay_testing.rs"
harness = false

[[test]]
name = "discrete_queue"
path = "src/bin/discrete_queue.rs"
harness = false

[[test]]
name = "gas_station_refueling"
path = "src/bin/gas_station_refueling.rs"
harness = false

[[test]]
name = "iron_ore"
path = "src/bin/iron_ore.rs"
harness = false

[[test]]
name = "material_blending"
path = "src/bin/material_blending.rs"
harness = false

[[test]]
name = "scheduled_event"
path = "src/bin/scheduled_event.rs"
harness = false

[[test]]
name = "source_sink"
path = "src/bin/source_sink.rs"
harness = false

[[test]]
name = "transport"
path = "src/bin/transport.rs"
harness = false